--- a/src/components/sideBar.css
+++ b/src/components/sideBar.css
@@ -5,15 +5,26 @@ aside {
     position: relative;
 }
 
+#menuContainer {
+    width: 90%;
+    margin: auto;
+}
+
 #logoArea {
     width: 100%;
     height: 15%;
     display: flex;
     align-items: center;
+    padding: 10% 0;
 }
 
-#logoArea svg {
+#logoArea #logoIcon {
     margin: 0 2rem;
+    fill: #373F41;
+}
+
+#logoArea #companyName {
+    color: #373F41;
 }
 
 #menuArea {
